force-app/main/default/objects/Supplementary_Card_Holders__c/Supplementary_Card_Holders__c.object-meta.xml
<CustomObject>
    <label>Supplementary Card Holder</label>
    <nameField>
        <displayFormat>SCH-{000000000}</displayFormat>
        <label>Supplementary Card Holder&#39;s Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplementary Card Holder</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>