force-app/main/default/objects/Supplementary_Card_Holders__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Supplementary Card Holder Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplementary Card Holder</relationshipLabel>
    <relationshipName>Supplementary_Card_Holder</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>