force-app/main/default/objects/Supplementary_Card_Holders__c/fields/Card_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Card_Holder_Name__c</fullName>
    <formula>Account__r.FirstName &amp; &#39; &#39; &amp; Account__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Card Holder Name</label>
    <type>Text</type>
</CustomField>